# Epitech

C - programation elementaire/CPE_2015_Allum1/: Makefile  allum1.h  checkargu.c  main.c  printplateau.c
C - programation elementaire/CPE_2015_BSQ/: Makefile  bsq  main.c  my.h  now_find_the_square.c  now_put_the_square.c
Programming System Unix/PSU_2016_myirc/: .gitignore  CMakeLists.txt  Makefile
Programming System Unix/PSU_2016_myirc/include/: add_to_tab.h  create_socket.h  delete_from_tab.h  exec_accept_file.h  exec_join.h  exec_list.h  exec_msg.h  exec_names.h  exec_nick.h  exec_part.h  exec_server.h  exec_users.h  handle_input.h  init_server.h  main_server.h  manage_irc.h  my_accept.h  s_channel.h  s_client.h  s_server.h  send_reply.h  watch_sockets.h
Programming System Unix/PSU_2016_myirc/include/client/: execCommand.h  funcTab.h  getMessage.h  init.h  sendMessage.h  strtowordtab.h  structClient.h  useCommand.h
Programming System Unix/PSU_2016_myirc/src/client/: execCommand.c  free_tab.c  functab.c  getMessage.c  init.c  main.c  my_str_to_word_tab.c  sendMessage.c
Programming System Unix/PSU_2016_myirc/src/client/commands/: help.c  nick.c  quit.c  server.c
Programming System Unix/PSU_2016_myirc/src/server/: add_client.c  add_to_tab.c  check_args.c  create_socket.c  delete_from_tab.c  exec_accept_file.c  exec_join.c  exec_list.c  exec_msg.c  exec_names.c  exec_nick.c  exec_part.c  exec_server.c  exec_users.c  free_tab.c  handle_input.c  in_tab.c  init_server.c  main.c  manage_error.c  manage_irc.c  max_fd.c  my_accept.c  send_reply.c  watch_sockets.c
(+705 files in other folders)
